deployment/k8s/novnc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novnc
  namespace: obs-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: novnc
  template:
    metadata:
      labels:
        app: novnc
    spec:
      containers:
      - name: novnc
        image: miriha/docker-novnc:latest
        ports:
        - containerPort: 8080
        - containerPort: 5900  # VNC port
        - containerPort: 6000  # X11 port
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 6
          timeoutSeconds: 1
          failureThreshold: 5
