deployment/k8s/novnc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novnc
  namespace: obs-cloud
spec:
  selector:
    app: novnc
  ports:
  - port: 8080
    targetPort: 8080
