deployment/k8s/novnc-x11-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novnc-x11
  namespace: obs-cloud
spec:
  selector:
    app: novnc
  ports:
  - port: 6000
    targetPort: 6000
