deployment/k8s/obs-cloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obs-builder
  namespace: obs-cloud
spec:
  selector:
    app: obs-builder
  ports:
  - name: debugpy
    port: 5699
    targetPort: 5678
  - name: websocket
    port: 4455
    targetPort: 4455
  - name: srt-tcp
    port: 2000
    targetPort: 2000
    protocol: TCP
  - name: srt-udp
    port: 2000
    targetPort: 2000
    protocol: UDP
  type: LoadBalancer
