deployment/k8s/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: novnc-route
  namespace: obs-cloud
spec:
  parentRefs:
  - name: gateway # 🔁 Replace with your actual Gateway name
    namespace: default # 🎯 Likely needed if Gateway is in another namespace
    # sectionName: https -> # No SectionName is set on this parentRef https://gateway-api.sigs.k8s.io/geps/gep-1713/?h=sectionname#gateway-parents-and-sectionname
    sectionName: https-obs.oke.bey.media
  hostnames: # Update the hostname to match what is configured in the Gateway resource
  - "obs.oke.bey.media" # 🌐 Your custom hostname
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: novnc
      port: 8080
